--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: web1
     steps:
       - name: Build docker image
-        run: docker build -t p2p-backend:latest .
+        run: docker build -f dockerfile -t p2p-backend:latest .
         shell: bash
       - name: Recreate container
         run: /data/recreate_p2p_backend.sh
