--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,8 +7,10 @@ jobs:
   deploy:
     runs-on: web1
     steps:
+      - name: Checkout git repository
+        uses: actions/checkout@v3
       - name: Build docker image
-        run: docker build -f dockerfile -t p2p-backend:latest .
+        run: docker build -t p2p-backend:latest .
         shell: bash
       - name: Recreate container
         run: /data/recreate_p2p_backend.sh
